--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^2.0.5",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -42,9 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
-    "eslint": "^7.20.0",
+    "eslint": "5.12.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.0.7"
   }
 }
