--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.0.5",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "eslint": "5.12.0",
