--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.3",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.0.5",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
